# mattwindham.dev

./: .gitignore  README.md
.github/workflows/: apply-site-drift-fix.yml  aws-diagnostic.yml  billing-incident-diagnostic.yml  build-demo-image.yml  build-django-image.yml  check-api-state.yml  deploy-site.yml  diagnose-cert-route53.yml  fix-api-gateway-state.yml  fix-log-viewer-api-state.yml  fix-log-viewer-route.yml  fix-stages-and-dkim.yml  gather-drift-ids.yml  import-cloudfront-and-dns.yml  import-lambda-functions.yml  import-site-drift.yml  plan-site-drift-fix.yml  spin-up-eks-demo.yml  teardown-eks-demo.yml  terraform-site-django.yml  terraform.yml
app/: .dockerignore  Dockerfile  pyproject.toml
app/accounts/: admin.py  models.py
app/accounts/migrations/: 0001_initial.py  0002_create_admins_group.py
app/config/: settings.py  urls.py
app/core/: urls.py  views.py
app/core/migrations/: 0001_set_site_domain.py
app/core/templates/core/: about.html  index.html  projects.html  resume.html
app/opportunities/: urls.py
app/static/css/: site.css
app/templates/: base.html
app/templates/account/: email_confirm.html  login.html  logout.html  signup.html  verification_sent.html
k8s/argocd/: application.yaml  values.yaml
k8s/demo-site/: deployment.yaml  ingress.yaml  service.yaml
terraform/billing-alert/: backend.tf  main.tf  outputs.tf  variables.tf  versions.tf
terraform/bootstrap/: main.tf  outputs.tf  variables.tf
terraform/eks-demo-iam/: backend.tf  budget.tf  (+2 more)
web/: Dockerfile  astro.config.mjs  nginx.conf  package-lock.json  package.json
(+67 files in other folders)
