[project]
name = "mattwindham-django"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.7",
    "django-allauth>=65.18.0",
    "django-ses>=4.7.2",
    "gunicorn>=26.0.0",
    "psycopg[binary]>=3.3.4",
    "pyjwt[crypto]>=2.13.0",
    "requests>=2.34.2",
    "whitenoise>=6.12.0",
]
